@@ -34,7 +34,7 @@ set APP_HOME=%DIRNAME%..
 for %%i in ("%APP_HOME%") do set APP_HOME=%%~fi
 
 @rem Add default JVM options here. You can also use JAVA_OPTS and GRADLE_FX_OPTS to pass JVM options to this script.
-set DEFAULT_JVM_OPTS="--module-path" "/Users/mihailk/javafx-sdk-21.0.5/lib" "--add-modules" "javafx.controls,javafx.fxml"
+set DEFAULT_JVM_OPTS="--module-path" "%APP_HOME%\lib" "--module" "org.example/org.example.Launcher"
 
 @rem Find java.exe
 if defined JAVA_HOME goto findJavaFromJavaHome
@@ -68,11 +68,11 @@ goto fail
 :execute
 @rem Setup the command line
 
-set CLASSPATH=%APP_HOME%\lib\gradleFX-1.0.jar;%APP_HOME%\lib\javafx-fxml-21-mac-aarch64.jar;%APP_HOME%\lib\javafx-fxml-21.jar;%APP_HOME%\lib\javafx-controls-21-mac-aarch64.jar;%APP_HOME%\lib\javafx-controls-21.jar;%APP_HOME%\lib\javafx-graphics-21-mac-aarch64.jar;%APP_HOME%\lib\javafx-graphics-21.jar;%APP_HOME%\lib\javafx-base-21-mac-aarch64.jar;%APP_HOME%\lib\javafx-base-21.jar;%APP_HOME%\lib\log4j-core-2.20.0.jar;%APP_HOME%\lib\log4j-api-2.20.0.jar
-
+set CLASSPATH=
+set MODULE_PATH=
 
 @rem Execute gradleFX
-"%JAVA_EXE%" %DEFAULT_JVM_OPTS% %JAVA_OPTS% %GRADLE_FX_OPTS%  -classpath "%CLASSPATH%" org.example.PhoneBookApp %*
+"%JAVA_EXE%" %JAVA_OPTS% %GRADLE_FX_OPTS% %DEFAULT_JVM_OPTS% %*
 
 :end
 @rem End local scope for the variables with windows NT shell
